--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
+---
 name: flink-sql-emr-runner
 
 on:
@@ -27,8 +25,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install black pytest
         pip install -r emr-deployment-scripts/jobs-deployment/requirements.txt -r emr-deployment-scripts/jobs-deployment/tests/requirements.txt
+
+    - name: Analysing the code with black
+      run: |
+        black --target-version py37 --line-length 120 --check --verbose .
 
     - name: Test with pytest
       run: |
