--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 ---
-name: flink-sql-emr-runner
+name: flink-sql-runner
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install black pytest
-        pip install -r emr-deployment-scripts/jobs-deployment/requirements.txt -r emr-deployment-scripts/jobs-deployment/tests/requirements.txt
+        pip install -r deployment-scripts/jobs-deployment/requirements.txt -r deployment-scripts/jobs-deployment/tests/requirements.txt
 
     - name: Analysing the code with black
       run: |
