--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
 
@@ -30,7 +30,7 @@ jobs:
           pip install --upgrade pip
       - name: Test pre-commit hooks
         run: |
-          pip install .[tests]
+          pip install .deployment-scripts/job-deployment/[tests]
           pip freeze
           pipdeptree
           pre-commit run --all-files
