--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Test with tox
         run: |
           tox -e py
+          py.test --basetemp=.tox/tmp/package/1/
       - name: Wheel
         run: |
           python setup.py sdist
