--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
+include LICENSE
 include *.md
 include requirements.txt
-include deployment-scripts/jobs-deployment/requirements.txt
+
+graft flink_sql_runner/runner
