--- a/helm/flink-sql-runner/templates/flink-deployment.yaml
+++ b/helm/flink-sql-runner/templates/flink-deployment.yaml
@@ -32,7 +32,7 @@ spec:
           {{- if .Values.podTemplate.env }}
           env:
             {{- if .Values.podTemplate.env | default false }}
-              {{- toYaml .Values.podTemplate.env | nindent 12 }}
+              {{- tpl (toYaml .Values.podTemplate.env) . | nindent 12 }}
             {{- end }}
           {{- end }}
       {{- if .Values.podTemplate.volumes }}
