Expect one line sql in helm chart

--- a/helm/flink-sql-runner/templates/flink-deployment.yaml
+++ b/helm/flink-sql-runner/templates/flink-deployment.yaml
@@ -59,7 +59,7 @@ spec:
       {{- end }}
       {{- if .Values.query.sql }}
       - --query
-      - {{ .Values.query.sql | toYaml | nindent 6 }}
+      - {{ .Values.query.sql }}
       {{- end }}
       - --metadata-query-name
       - {{ .Values.query.name }}
