--- a/helm/flink-sql-runner/templates/flink-deployment.yaml
+++ b/helm/flink-sql-runner/templates/flink-deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
-  name: {{  tpl .Values.deploymentName . }}
+  name: {{  include "flink-sql-runner.name" . }}
   namespace: {{ .Release.Namespace }}
 spec:
   image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -10,10 +10,6 @@ spec:
   flinkVersion: {{ .Values.flinkVersion }}
   serviceAccount: {{ tpl .Values.serviceAccount . }}
   restartNonce: {{ .Values.restartNonce }}
-  {{- if .Values.ingress }}
-  ingress:
-    {{- toYaml .Values.ingress | nindent 4 }}
-  {{- end }}
   jobManager:
     {{- toYaml .Values.jobManager | nindent 4 }}
   taskManager:
@@ -31,13 +27,13 @@ spec:
           volumeMounts:
             {{- if .Values.podTemplate.volumeMounts | default false }}
               {{- toYaml .Values.podTemplate.volumeMounts | nindent 12 }}
-            {{- end }}
+              {{- end }}
           {{- end }}
           {{- if .Values.podTemplate.env }}
           env:
             {{- if .Values.podTemplate.env | default false }}
               {{- tpl (toYaml .Values.podTemplate.env) . | nindent 12 }}
-            {{- end }}
+              {{- end }}
           {{- end }}
       {{- if .Values.podTemplate.volumes }}
       volumes:
@@ -56,32 +52,10 @@ spec:
       - -pyclientexec
       - {{ .Values.python.pyclientexec }}
       - -py
-      {{- if .Values.query.code }}
-      - /opt/flink-sql-runner/custom-flink-run-sql.py
-      {{ else if .Values.query.sql }}
-      - /opt/flink-sql-runner/flink-run-sql.py
+      - {{ .Values.python.pyscript }}
+      {{- range .Values.python.args }}
+      - {{ . }}
       {{- end }}
-      {{- if .Values.query.sql }}
-      - --query
-      - {{ .Values.query.sql }}
-      {{- end }}
-      - --metadata-query-name
-      - {{ .Values.query.name }}
-      - --metadata-query-description
-      - {{ .Values.query.description }}
-      - --metadata-query-id
-      - "{{ .Values.query.name }}-v{{ .Values.query.version }}"
-      - --metadata-query-version
-      - {{ .Values.query.version | quote }}
-      - --metadata-query-create-timestamp
-      - {{ .Values.query.timestamp }}
-      - --target-table
-      - {{ .Values.query.targetTable | quote }}
-      {{- with .Values.query.flinkSchemaPaths }}
-      - --table-definition-path
-        {{- toYaml . | nindent 6 }}
-      {{- end }}
-      {{- toYaml .Values.query.runnerExtraParams | nindent 6 }}
     state: {{ .Values.job.state }}
     upgradeMode: {{ .Values.job.upgradeMode }}
     parallelism: {{ .Values.job.parallelism }}
